<resources>
    <string name="app_name">CPA web</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cpaGroup" translatable="false">CPAGroup©</string>
    <string name="c" translatable="false">C</string>
    <string name="p" translatable="false">P</string>
    <string name="a" translatable="false">A</string>
    <string name="cpa" translatable="false">CPA</string>

    <string name="txt_building">Em construção</string>
    <string name="txt_home">Inicio</string>

    <string name="txt_welcome">Bem vindo à</string>
    <string name="txt_share_moments">Compartilhe momentos</string>

    <string name="txt_register">Cadastro</string>
    <string name="txt_profile_type">Qual tipo do seu perfil?</string>
    <string name="txt_profile_type_common">Comum</string>
    <string name="txt_profile_type_professional">Profissional</string>
    <string name="txt_have_account">Já possui conta? Faça loginn</string>
    <string name="txt_doesnt_have_account">Não possui conta? Cadastre-se</string>


    <string name="txt_signin">Entrar</string>
    <string name="txt_create_account">Criar conta</string>
    <string name="lbl_full_name">Nome completo</string>
    <string name="lbl_birthday">Data de nascimento</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Senha</string>
    <string name="lbl_phone">Celular</string>
    <string name="lbl_cpf">CPF</string>
    <string name="lbl_confirm_password">Confirmar senha</string>
    <string name="txt_cancel">Cancelar</string>
    <string name="txt_finish">Finalizar</string>
    <string name="txt_register_sucess">Cadastro realizado com sucesso!!</string>
    <string name="menu_professionals">Profissionais</string>
    <string name="menu_places">Lugares</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_blog">Blog</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_appointment">Consultas</string>
    <string name="tv_title_professional">professionals</string>
    <string name="txt_learn_more">Saiba mais</string>
    <string name="txt_hint_professional_name">Nome do profissional</string>
    <string name="txt_rating_appointment">De 0 a 5 avalie o atendimento</string>
    <string name="txt_feedback">Deixe seu feedback</string>
    <string name="txt_appointment_data">Dados da consulta</string>
    <string name="tv_title_places">Lugares acessíveis</string>
    <string name="txt_hint_place_name">Nome de lugar</string>
    <string name="txt_speciality">Especialidade</string>
    <string name="settings">Configurações</string>
    <string name="enviar">Enviar</string>
    <string name="digite_aqui">Digite aqui:</string>
    <string name="txt_exit">Sair</string>
    <string name="txt_back">Voltar</string>
    <string name="menu_settings">Settings</string>
    <string name="lbl_address">Endereço</string>

    <string name="calendar_user" translatable="false">user</string>
    <string name="calendar_offline" translatable="false">offline</string>
    <string name="calendar_primary" translatable="false">primary</string>
    <string name="date_format_patterns" translatable="false">yyyy-MM-dd\'T\'HH:mm:ss</string>
    <string name="txt_schedule_appointment">Agendar consulta</string>
    <string name="txt_hint_patient_name">Nome do paciente</string>
    <string name="txt_shedule_appointment_title">Agendamento de consulta</string>
    <string name="txt_hint_event_link">Clique para ir para o evento</string>
</resources>