<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterSucess">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/fundo"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75sp"
            android:layout_marginBottom="30dp"
            android:gravity="center">

            <ImageView
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_marginRight="8sp"
                android:src="@mipmap/logocpa"
                android:layout_marginLeft="-20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5sp"
                android:text="@string/c"
                android:textColor="@color/primary"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2sp"
                android:text="@string/p"
                android:textColor="@color/primary"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a"
                android:textColor="@color/primary"
                android:textSize="35sp"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_register_sucess"
            android:layout_marginBottom="30dp"
            android:background="@android:color/transparent"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/okay"
            android:layout_marginBottom="20dp"/>

        <Button
            style="@style/OrangeButton"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_rectangle"
            android:text="@string/txt_signin"
            android:onClick="login"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>