<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-48dp"
        android:background="@mipmap/fundo">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75sp"
            android:layout_marginBottom="30sp"
            android:gravity="center">

            <ImageView
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:layout_marginRight="8sp"
                android:src="@mipmap/logocpa"
                android:layout_marginLeft="-20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5sp"
                android:text="@string/c"
                android:textColor="@color/primary"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2sp"
                android:text="@string/p"
                android:textColor="@color/primary"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a"
                android:textColor="@color/primary"
                android:textSize="35sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            >
            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="42dp"
                android:background="@drawable/rounded_left_border"
                android:backgroundTint="@color/primary"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/email"
                    android:layout_margin="17dp"
                    />
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="#F9F9F9"
                android:paddingLeft="10dp"
                android:textSize="15dp"
                android:hint="@string/lbl_email"
                android:fontFamily="@font/montserrat_light"
                android:id="@+id/edt_email"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            >
            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="42dp"
                android:background="@drawable/rounded_left_border"
                android:backgroundTint="@color/primary"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/lock"
                    android:layout_margin="17dp"
                    />
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="#F9F9F9"
                android:paddingLeft="10dp"
                android:textSize="15dp"
                android:hint="@string/lbl_password"
                android:fontFamily="@font/montserrat_light"
                android:id="@+id/edt_password"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/OrangeButton"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_rectangle"
            android:text="@string/txt_signin"
            />

        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_doesnt_have_account"
            android:fontFamily="@font/montserrat"/>

    </LinearLayout>

</LinearLayout>