<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScheduleAppointment"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        >
        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:padding="16dp"
            android:text="@string/txt_back"
            android:textColor="@color/white"
            android:textFontWeight="@integer/material_motion_duration_medium_1"
            android:drawableLeft="@drawable/baseline_arrow_back_ios_24"
            android:textSize="16sp"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_shedule_appointment_title"
            android:textSize="24sp"
            android:layout_marginBottom="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:id="@+id/tb_professional_name"
                android:text="@string/txt_hint_professional_name"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tb_professional_name_text"
                android:text="@string/txt_hint_professional_name"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tb_patient_name"
                android:text="@string/txt_hint_patient_name"
                android:layout_marginRight="30dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tb_patient_name_text"
                android:text="@string/txt_hint_patient_name"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btn_send_appointment"
            android:layout_width="200dp"
            android:layout_height="45dp"
            style="@style/OrangeButton"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_rectangle"
            android:layout_marginTop="10dp"
            android:text="@string/txt_schedule_appointment"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:id="@+id/container_event_result"
            android:visibility="invisible"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tb_event_link_text"
                android:text="@string/txt_hint_event_link"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>