<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Support">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:gravity="center"
        android:padding="30dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo_com_fundo"
            android:layout_marginBottom="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            >
            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="42dp"
                android:background="@drawable/rounded_left_border"
                android:backgroundTint="@color/primary"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/name"
                    android:layout_margin="17dp"
                    />
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="#F9F9F9"
                android:paddingLeft="10dp"
                android:textSize="15dp"
                android:hint="@string/lbl_full_name"
                android:fontFamily="@font/montserrat_light"
                android:id="@+id/edt_name"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            >
            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="42dp"
                android:background="@drawable/rounded_left_border"
                android:backgroundTint="@color/primary"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/email"
                    android:layout_margin="17dp"
                    />
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="#F9F9F9"
                android:paddingLeft="10dp"
                android:textSize="15dp"
                android:hint="@string/lbl_email"
                android:fontFamily="@font/montserrat_light"
                android:id="@+id/edt_email"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            >
            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="42dp"
                android:background="@drawable/rounded_left_border"
                android:backgroundTint="@color/primary"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@mipmap/phone"
                    android:layout_margin="17dp"
                    />
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:background="#F9F9F9"
                android:paddingLeft="10dp"
                android:textSize="15dp"
                android:hint="@string/lbl_phone"
                android:fontFamily="@font/montserrat_light"
                android:id="@+id/edt_phone"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_light"
                android:textColor="@color/black_900"
                android:textSize="18dp"
                android:text="@string/digite_aqui"/>

            <EditText
                android:layout_width="330dp"
                android:layout_height="150dp"
                android:background="#F3F3F3"
                />

        </LinearLayout>



        <Button
            style="@style/OrangeButton"
            android:layout_width="170dp"
            android:layout_height="45dp"
            android:background="@drawable/rounded_rectangle"
            android:text="@string/enviar"
            android:layout_marginBottom="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cpaGroup"
            android:textColor="@color/black_300"
            android:textSize="18dp"
            android:fontFamily="@font/montserrat_light"/>




    </LinearLayout>

</LinearLayout>