<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="39sp"
        android:background="@mipmap/fundo_choice_login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="160dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50sp"
                android:layout_marginBottom="7sp"
                android:text="@string/recepcao"
                android:textSize="20sp"
                android:layout_marginTop="90sp"
                android:textColor="#79000000"
                android:fontFamily="@font/montserrat"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="75sp"
                android:gravity="center">

                <ImageView
                    android:layout_width="70sp"
                    android:layout_height="70sp"
                    android:layout_marginRight="8sp"
                    android:src="@mipmap/logocpa" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5sp"
                    android:text="@string/c"
                    android:textSize="35sp"
                    android:textColor="@color/primary"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2sp"
                    android:text="@string/p"
                    android:textSize="35sp"
                    android:textColor="@color/primary"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/a"
                    android:textSize="35sp"
                    android:textColor="@color/primary"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100sp"
            android:text="Compartilhe
            momentos"
            android:textSize="35sp"
            android:textStyle="normal"
            android:fontFamily="@font/montserrat_light"/>

        <Button
            style="@style/BlueButton"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginTop="30sp"
            android:background="@drawable/rounded_rectangle"
            android:text="Login"
            android:onClick="login"/>

        <Button
            style="@style/OrangeButton"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_rectangle"
            android:text="Criar conta"
            android:onClick="cadastro"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>