<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutProfessional">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            >

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/circle"
                android:gravity="center"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ci_profile_image"
                    android:layout_width="145dp"
                    android:layout_height="145dp"
                    android:src="@mipmap/foto_perfil"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:paddingTop="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_professional_name_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Ruben Dias"
                        android:textColor="@color/black"
                        android:fontFamily="@font/montserrat"
                        android:textSize="25dp"/>

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@mipmap/ic_check"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="8dp"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/tv_professional_speciality_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="Fisioterapeuta"
                    android:fontFamily="@font/montserrat_light"
                    android:textSize="18dp"
                    />

                <RatingBar
                    android:id="@+id/rb_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:isIndicator="true"
                    style="@style/Widget.AppCompat.RatingBar.Indicator"
                    android:theme="@style/RatingBar"
                    android:backgroundTintMode="@color/secondary"
                    android:stepSize="0.1"
                    android:numStars="5"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/rounded_rectangle"
            android:padding="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#E1E1E1"

            >
            <TextView
                android:id="@+id/tv_professional_about_text"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lorem ipsum dolor sit amet, consectetur adipi
            scing elit. Quisque fringilla a diam a feugiat. Or ci varius
            natoque penatibus et magnis dis parturient
            montes, nascetur ridiculus mus. Ut semper nibh sit amet nisl imperdiet
            viverra. Class aptent taciti sociosqu ad litora."/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_send_appointment"
            android:layout_width="200dp"
            android:layout_height="45dp"
            style="@style/OrangeButton"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_rectangle"
            android:layout_marginTop="10dp"
            android:text="Agendar consulta"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_email"
                    android:textSize="18dp"
                    android:layout_marginBottom="3dp"/>
                <TextView
                    android:layout_weight="3"
                    android:id="@+id/tv_professional_email_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="rubendiassilva@hotmail.com"
                    android:textSize="18dp"
                    android:layout_marginBottom="3dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_address"
                    android:textSize="18dp"
                    android:layout_marginBottom="3dp"/>
                <TextView
                    android:layout_weight="3"
                    android:id="@+id/tv_professional_address_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rua Coronel Meireles, 1341"
                    android:textSize="18dp"
                    android:layout_marginBottom="3dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_phone"
                    android:textSize="18dp"
                    android:layout_marginBottom="3dp"/>
                <TextView
                    android:layout_weight="3"
                    android:id="@+id/tv_professional_phone_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="(11) 999999999"
                    android:textSize="18dp"/>
            </LinearLayout>



        </LinearLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>